--- a/src/Payment.css
+++ b/src/Payment.css
@@ -22,3 +22,12 @@
   margin: 0 20px;
   border-bottom: 1px solid lightgray;
 }
+
+.payment__title {
+  flex: 0.2;
+}
+
+.payment__address, .payment__items, .payment__details {
+  flex: 0.8;
+}
+
