--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* Trying to incorporate mobile first designing */
+/* Styles for screens between 400 px and 900 */
+@media screen and (max-width: 900px) {
+  body {
+    font-size: small;
+  }
+  
+}
